terraform/instances/main.tf
resource "aws_security_group" "allow_access" {
  name        = "stack-dependency-demo"
  description = "Allow SSH, HTTP and HTTPS traffic"
  vpc_id      = var.vpcId

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Stack Dependency EC2"
  }
}

resource "aws_key_pair" "ssh_key" {
  key_name   = "ec2-key-pair"
  public_key = file(var.public_key)
}

resource "aws_instance" "sd_instance" {
  ami                         = "ami-04a81a99f5ec58529"
  instance_type               = "t2.micro"
  subnet_id                   = var.subnetId
  key_name                    = aws_key_pair.ssh_key.key_name
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.allow_access.id]

  tags = {
    Name = "Stack Dependency EC2"
  }
}
